--- a/.travis.yml
+++ b/.travis.yml
@@ -70,5 +70,6 @@ install:
   - popd;popd
 
 script:
+  - pip install -r requirements.txt
   - export PYTHONPATH="$INSTALL_DIR/lib/python$MB_PYTHON_VERSION/dist-packages:$PYTHONPATH"
   - python setup.py test
