--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,8 @@ before_install:
   - before_install # method in multibuild
 
 install:
+
+  - pip install git+https://git@github.com/equinor/stea.git
   # For now we have to make install libecl.
   # Remove when it's possible to pip install
   - pushd libecl
