--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,9 @@
 [aliases]
-test=pytest
+test              = pytest
+functional_test   = pytest --addopts "-vs -k functional"
+unit_test         = pytest --addopts "-vs -k unit"
 
 [tool:pytest]
-python_files = tests/unit/*.py
+python_files =
+    tests/unit/*.py
+    tests/functional/*.py
