Using configsuite to configure NPV job

--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,6 @@ install:
   - popd;popd
 
 script:
-  - pip install -r requirements.txt
+  - pip install --upgrade -r requirements.txt
   - export PYTHONPATH="$INSTALL_DIR/lib/python$MB_PYTHON_VERSION/dist-packages:$PYTHONPATH"
   - python setup.py test
