Add minor cleanup after code review

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,5 @@ unit_test         = pytest --addopts "-vs -k unit"
 python_files =
     tests/unit/*.py
     tests/functional/*.py
+log_cli = 0
+log_cli_level = INFO
