--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,13 @@
 [aliases]
-test              = pytest
+test              = pytest --addopts "-vs -m \"not slow\""
 functional_test   = pytest --addopts "-vs -k functional"
 unit_test         = pytest --addopts "-vs -k unit"
+slowtest          = pytest --addopts "-vs -k slow"
 
 [tool:pytest]
 python_files =
     tests/unit/*.py
     tests/functional/*.py
+markers = slow
 log_cli = 0
 log_cli_level = INFO
