--- a/tests/testdata/workflows/drill_planner_config.yml
+++ b/tests/testdata/workflows/drill_planner_config.yml
@@ -3,7 +3,7 @@ end_date: 2001-01-01
 rigs:
   -
     name: 'A'
-    wells: ['PROD1', 'PROD2', 'INJ1']
+    wells: ['PROD1', 'PROD2', 'INJ1', 'EXTRA1']
     slots: ['S1', 'S2', 'S3']
     unavailability:
       -
@@ -23,23 +23,30 @@ rigs:
       -
         start: 2000-02-14
         stop: 2000-02-15
+  -
+    name: 'C'
+    wells: ['EXTRA2']
+    slots: ['S6']
 slots:
   -
     name: 'S1'
-    wells: ['PROD1', 'PROD2', 'INJ1']
+    wells: ['PROD1', 'PROD2', 'INJ1', 'EXTRA1']
     unavailability:
       -
         start: 2000-02-01
         stop: 2000-02-03
   -
     name: 'S2'
-    wells: ['PROD1', 'PROD2', 'INJ1']
+    wells: ['PROD1', 'PROD2', 'INJ1', 'EXTRA1']
   -
     name: 'S3'
-    wells: ['PROD1', 'PROD2', 'INJ1']
+    wells: ['PROD1', 'PROD2', 'INJ1', 'EXTRA1']
   -
     name: 'S4'
     wells: ['INJ1', 'INJ2', 'PROD3']
   -
     name: 'S5'
     wells: ['INJ1', 'INJ2', 'PROD3']
+  -
+    name: 'S6'
+    wells: ['EXTRA2']
