--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,7 @@
 [aliases]
-test              = pytest --addopts "-vs -m \"not slow\""
+test              = pytest --addopts "-vs"
 functional_test   = pytest --addopts "-vs -k functional"
 unit_test         = pytest --addopts "-vs -k unit"
-slowtest          = pytest --addopts "-vs -k slow"
 
 [tool:pytest]
 python_files =
