--- a/.travis.yml
+++ b/.travis.yml
@@ -65,5 +65,6 @@ install:
 
 script:
   - pip install --upgrade -r requirements.txt
+  - pip install --upgrade -r test_requirements.txt
   - export PYTHONPATH="$INSTALL_DIR/lib/python$MB_PYTHON_VERSION/dist-packages:$PYTHONPATH"
   - python setup.py test
