--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,6 @@ matrix:
     - DYLD_LIBRARY_PATH=${INSTALL_DIR}/lib:${INSTALL_DIR}/lib64:${DYLD_LIBRARY_PATH}"
 
 before_install:
-  - source .libecl_version
-  - git clone https://github.com/equinor/libecl
-  - pushd libecl
-  - git fetch
-  - git checkout tags/$LIBECL_VERSION
-  - popd
   - git clone https://github.com/matthew-brett/multibuild.git
   - unset -f pushd
   - unset -f popd
@@ -44,27 +38,12 @@ before_install:
   - before_install # method in multibuild
 
 install:
-
+  - pip install --upgrade pip setuptools wheel
   - pip install git+https://git@github.com/equinor/stea.git
   # For now we have to make install libecl.
   # Remove when it's possible to pip install
-  - pushd libecl
-  - pip install -r requirements.txt
-  - mkdir build
-  - pushd build
-  - cmake .. -DENABLE_PYTHON=ON
-             -DINSTALL_CWRAP=OFF
-             -DCMAKE_INSTALL_PREFIX=$INSTALL_DIR
-             -DCMAKE_PREFIX_PATH=$INSTALL_DIR
-             -DCMAKE_C_FLAGS='-Werror=all'
-             -DCMAKE_INSTALL_NAME_DIR=$INSTALL_DIR/lib
-             -DCMAKE_CXX_FLAGS='-Werror -Wno-unused-result'
-  - make
-  - make install
-  - popd;popd
-
 script:
-  - pip install --upgrade -r requirements.txt
+  - pip install .
   - pip install --upgrade -r test_requirements.txt
   - export PYTHONPATH="$INSTALL_DIR/lib/python$MB_PYTHON_VERSION/dist-packages:$PYTHONPATH"
-  - python setup.py test
+  - pytest
