--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,7 +11,11 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8"]
-        os: [ ubuntu-latest, macos-latest]
+        os: [ ubuntu-latest]
+        include:
+          - os: macos-latest
+            python-version: "3.6"
+
     runs-on: ${{ matrix.os }}
 
     steps:
