Add select_wells script

--- a/spinningjenny/share/entry_points.yml
+++ b/spinningjenny/share/entry_points.yml
@@ -10,3 +10,4 @@ well_filter: "spinningjenny.script.fm_well_filter:main_entry_point"
 interpret_well_drill: "spinningjenny.script.fm_interpret_well_drill:main_entry_point"
 extract_summary_data: "spinningjenny.script.fm_extract_summary_data:main_entry_point"
 drill_date_planner: "spinningjenny.script.fm_drill_date_planner:main_entry_point"
+select_wells: "spinningjenny.script.fm_select_wells:main_entry_point"
