Suppress healthcheck for hypothesis in CI

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -45,5 +45,4 @@ jobs:
 
       - name: "Test package spinningjenny"
         run: |
-          python -m pytest -sv
-
+          python -m pytest -sv --hypothesis-profile ci
