--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,11 +16,11 @@ jobs:
     name: "Python ${{ matrix.python-version }} on ${{ matrix.os }}"
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
         os: [ ubuntu-latest]
         include:
           - os: macos-latest
-            python-version: "3.6"
+            python-version: "3.8"
 
     runs-on: ${{ matrix.os }}
 
