--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "ortools==9.2.9972",
     "ruamel.yaml>=0.17.21",
     "stea>=0.5.2",
+    "pydantic >= 1.10.2",
 ]
 dynamic = [
     "version",
