Initial well trajectory algorithm
Co-authored-by: Sharlon N. Regales <sharlon.regales@tno.nl>
Co-authored-by: Rodolfo Oliveira <RODOO@equinor.com>
Co-authored-by: Sldawomir P. Szklarz <slawomir.szklarz@tno.nl>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "ruamel.yaml>=0.17.21",
     "stea>=0.5.2",
     "pydantic < 2",
+    "scipy"
 ]
 dynamic = [
     "version",
