--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,11 @@ test = [
     "pytest-timeout",
     "isort",
 ]
+docs = [
+    "mkdocs",
+    "mkdocs-material",
+    "mkdocstrings",
+]
 
 [project.entry-points."everest"]
 spinningjenny = "spinningjenny.everest_hooks"
