Introduce sub-field 'tokens' in well's ops field
- Seperate Well and Operation into two modules
- Create distict Operation and LegacyOperation models
- Create new Operation model tests
- Adopt new Operation in  add_template, well_constraints, schmerge

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ docs = [
     "mkdocstrings[python]",
     "mdx_include",
     "pygments",
-    "mdantic"
+    "markdown-mdantic"
 ]
 
 [project.entry-points."everest"]
