Update reference documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
         - Strip Dates: reference/strip_dates/reference.md
         - Well Constraints: reference/well_constraints/reference.md
         - Well Filter: reference/well_filter/reference.md
+        - Well Trajectory: reference/well_trajectory/reference.md
       - Shared Functions:
         - Validators: reference/shared/validators.md
         - Models: reference/shared/models.md
