--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,12 @@ dependencies = [
     "ecl>=2.13.2",
     "Jinja2>=3.1.2",
     "numpy>=1.23.2",
-    "ortools>=9.5.2237",
     "ruamel.yaml>=0.17.21",
     "stea>=0.5.2",
     "pydantic < 2",
+    "ortools>=9.3",
+    "rips>=2023.01.0.1",
+    "lasio",
     "scipy"
 ]
 dynamic = [
