--- a/.github/workflows/test_resinsight.yml
+++ b/.github/workflows/test_resinsight.yml
@@ -40,7 +40,7 @@ jobs:
           build-essential \
           gcc-12 g++-12 \
           curl zip unzip tar \
-          qtbase5-dev libqt5svg5-dev qtbase5-private-dev \
+          qtbase5-dev libqt5svg5-dev qtbase5-private-dev
           pip install -U pip
           pip install cmake aqtinstall
       - name: Install Qt
