--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ everest-models = "everest_models.everest_hooks"
 fm_add_templates = "everest_models.jobs.fm_add_templates.cli:main_entry_point"
 fm_drill_date_planner = "everest_models.jobs.fm_drill_date_planner.cli:main_entry_point"
 fm_drill_planner = "everest_models.jobs.fm_drill_planner.cli:main_entry_point"
+fm_compute_economics = "everest_models.jobs.fm_compute_economics.cli:main_entry_point"
 fm_npv = "everest_models.jobs.fm_npv.cli:main_entry_point"
 fm_extract_summary_data = "everest_models.jobs.fm_extract_summary_data.cli:main_entry_point"
 fm_interpret_well_drill = "everest_models.jobs.fm_interpret_well_drill.cli:main_entry_point"
