--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "Jinja2>=3.1.2",
     "numpy>=1.23.2",
     "ruamel.yaml>=0.17.21",
-    "fmu-steaclient @ git+https://github.com/equinor/fmu-steaclient.git",
+    "fmu-steaclient",
     "pydantic < 2",
     "ortools>=9.3",
     "rips>=2023.01.0.1",
