--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,13 +1,12 @@
 name: Style
 
 on:
- push:
-   branches:
-     - main
-   tags: "*"
- pull_request:
- 
-
+  push:
+    branches:
+      - main
+    tags:
+      - "*"
+  pull_request:
 
 jobs:
   check-style:
@@ -15,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.9']
+        python-version: ["3.8"]
 
     steps:
       - uses: "actions/checkout@v2"
@@ -24,15 +23,12 @@ jobs:
 
       - uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }} 
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
-          pip install isort
+          pip install .[style]
 
-      - name: Run isort
+      - name: Run pre-commit
         run: |
-          isort --check src/ tests/
-
-      - name: Run black
-        uses: psf/black@stable
+          pre-commit run --all-files --hook-stage=manual --show-diff-on-failure
