Expand on the well swapping forward model
- Handle N states where N >= 2
- Make the configuration more flexable
- And make the forward model more generic (Use outside of Well)

--- a/tests/testdata/workflows/well_swapping/add_template_config.yml
+++ b/tests/testdata/workflows/well_swapping/add_template_config.yml
@@ -1,11 +1,10 @@
 templates:
-  -
-    file: "./templates/welopen.jinja"
+  - file: "./templates/welopen.jinja"
     keys:
-        opname: open
-  -
-    file: "./templates/welshut.jinja"
+      opname: open
+  - file: "./templates/welshut.jinja"
     keys:
-        opname: shut
-
-
+      opname: shut
+  - file: "./templates/welclose.jinja"
+    keys:
+      opname: close
