--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,32 +9,33 @@ nav:
   - Home: index.md
   - tutorials.md
   - How-To Guides:
-    - contribute/contribute.md
-    - Add Template: https://fmu-docs.equinor.com/docs/everest/tutorial/everest_templating.html#pipelining-forward-models
-    - Well Order Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_order_optimisation.html#forward-models
-    - Well Rate Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_rate_optimisation.html#forward-models
-    - Well Selection Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_selection.html#forward-models
+      - contribute/contribute.md
+      - Add Template: https://fmu-docs.equinor.com/docs/everest/tutorial/everest_templating.html#pipelining-forward-models
+      - Well Order Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_order_optimisation.html#forward-models
+      - Well Rate Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_rate_optimisation.html#forward-models
+      - Well Selection Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_selection.html#forward-models
   - Reference:
       - Jobs:
-        - Add Templates: reference/add_templates/reference.md
-        - Drill Date Planner: reference/drill_date_planner/reference.md
-        - Drill Planner: reference/drill_planner/reference.md
-        - Compute Economics: reference/compute_economics/reference.md
-        - Extract Summary Date: reference/extract_summary_data/reference.md
-        - Interpret Well Drill: reference/interpret_well_drill/reference.md
-        - Net Present Value: reference/npv/reference.md
-        - Recovery Factor: reference/rf/reference.md
-        - Schmerge: reference/schmerge/reference.md
-        - Select Wells: reference/select_wells/reference.md
-        - Stea: reference/stea/reference.md
-        - Strip Dates: reference/strip_dates/reference.md
-        - Well Constraints: reference/well_constraints/reference.md
-        - Well Filter: reference/well_filter/reference.md
-        - Well Trajectory: reference/well_trajectory/reference.md
+          - Add Templates: reference/add_templates/reference.md
+          - Drill Date Planner: reference/drill_date_planner/reference.md
+          - Drill Planner: reference/drill_planner/reference.md
+          - Compute Economics: reference/compute_economics/reference.md
+          - Extract Summary Date: reference/extract_summary_data/reference.md
+          - Interpret Well Drill: reference/interpret_well_drill/reference.md
+          - Net Present Value: reference/npv/reference.md
+          - Recovery Factor: reference/rf/reference.md
+          - Schmerge: reference/schmerge/reference.md
+          - Select Wells: reference/select_wells/reference.md
+          - Stea: reference/stea/reference.md
+          - Strip Dates: reference/strip_dates/reference.md
+          - Well Constraints: reference/well_constraints/reference.md
+          - Well Filter: reference/well_filter/reference.md
+          - Well Swapping: reference/well_swapping/reference.md
+          - Well Trajectory: reference/well_trajectory/reference.md
       - Shared Functions:
-        - Validators: reference/shared/validators.md
-        - Models: reference/shared/models.md
-        - Arguments: reference/shared/arguments.md
+          - Validators: reference/shared/validators.md
+          - Models: reference/shared/models.md
+          - Arguments: reference/shared/arguments.md
       - reference/hook.md
   - explanation.md
 
@@ -78,7 +79,6 @@ markdown_extensions:
   - mdx_include:
       base_path: docs
   - codehilite
-  - mdantic
   - admonition
 
 extra:
