--- a/.github/workflows/test_resinsight.yml
+++ b/.github/workflows/test_resinsight.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   ERT_SHOW_BACKTRACE: 1
-  RESINSIGHT_VERSION: "2023.12.0"
-  INSTALL_DIR: local
+  RESINSIGHT_VERSION: "2024.03.2"
+  INSTALL_DIR: resinsight
 
 jobs:
   build_dependencies:
@@ -35,17 +35,8 @@ jobs:
         if: steps.cache-package.outputs.cache-hit != 'true'
         run: |
           sudo apt update
-          sudo apt -y install \
-          build-essential \
-          gcc-12 g++-12 \
-          curl zip unzip tar \
-          qtbase5-dev libqt5svg5-dev qtbase5-private-dev
-          pip install -U pip
-          pip install cmake aqtinstall
-      - name: Install Qt
-        if: steps.cache-package.outputs.cache-hit != 'true'
-        run: |
-          aqt install-qt linux desktop 5.15.2 -m qtcharts -O ${{ github.workspace }}/Qt
+          sudo apt -y install build-essential gcc-12 g++-12 curl zip unzip tar
+          sudo apt -y install qtbase5-dev qtbase5-private-dev libqt5charts5-dev libqt5svg5-dev
       - name: Switch cpp compiler
         if: steps.cache-package.outputs.cache-hit != 'true'
         run: |
@@ -57,27 +48,28 @@ jobs:
         if: steps.cache-package.outputs.cache-hit != 'true'
         run: |
           git clone -b v${{ env.RESINSIGHT_VERSION }} https://github.com/OPM/ResInsight.git
+      - name: Build ResInsight dependencies
+        if: steps.cache-package.outputs.cache-hit != 'true'
+        run: |
           cd ResInsight
           git submodule update --init
           ThirdParty/vcpkg/bootstrap-vcpkg.sh
           ThirdParty/vcpkg/vcpkg install grpc boost-filesystem boost-spirit eigen3
-          pip install -r GrpcInterface/Python/requirements.txt
-          # add missing directory that cause resinsight installation to fail
-          mkdir -p GrpcInterface/Python/rips/generated
       - name: Build ResInsight
         if: steps.cache-package.outputs.cache-hit != 'true'
         run: |
-          mkdir ${{ github.workspace }}/ResInsight/cmakebuild
-          cd ${{ github.workspace }}/ResInsight/cmakebuild
-          cmake \
-          -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/gcc_64/lib/cmake \
-          -DRESINSIGHT_ENABLE_GRPC=true \
-          -DVCPKG_TARGET_TRIPLET=x64-linux \
-          -DCMAKE_TOOLCHAIN_FILE=../ThirdParty/vcpkg/scripts/buildsystems/vcpkg.cmake \
-          -DRESINSIGHT_GRPC_PYTHON_EXECUTABLE=$( which python ) \
-          -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/${{ env.INSTALL_DIR }} \
-          ..
-
+          mkdir -p ResInsight/GrpcInterface/Python/rips/generated
+          mkdir ${{ github.workspace }}/ResInsight/build
+          cd ${{ github.workspace }}/ResInsight/build
+          cmake .. \
+              -DRESINSIGHT_ENABLE_GRPC=true \
+              -DVCPKG_TARGET_TRIPLET=x64-linux \
+              -DCMAKE_TOOLCHAIN_FILE=../ThirdParty/vcpkg/scripts/buildsystems/vcpkg.cmake \
+              -DBUILD_PYTHON=OFF \
+              -DRESINSIGHT_GRPC_DOWNLOAD_PYTHON_MODULE=OFF \
+              -DRESINSIGHT_GRPC_BUNDLE_PYTHON_MODULE=OFF \
+              -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/${{ env.INSTALL_DIR }} \
+              -DRESINSIGHT_ENABLE_HDF5=OFF
           make -j$( nproc ) install
       - name: Package ResInsight
         if: steps.cache-package.outputs.cache-hit != 'true'
@@ -88,7 +80,7 @@ jobs:
         with:
           name: resinsight_${{ env.RESINSIGHT_VERSION }}
           path: ${{ github.workspace }}/resinsight_${{ env.RESINSIGHT_VERSION }}.tar.gz
-          retention-days: 5
+          retention-days: 30
 
   tests:
     needs: build_dependencies
@@ -112,7 +104,7 @@ jobs:
         run: |
           cd $HOME
           tar zxf ${{ github.workspace }}/resinsight_${{ env.RESINSIGHT_VERSION }}.tar.gz
-          echo "PATH=${PATH}:${HOME}/${INSTALL_DIR}/bin" >> ${GITHUB_ENV}
+          echo "PATH=${PATH}:${HOME}/${INSTALL_DIR}" >> ${GITHUB_ENV}
 
       - uses: "actions/checkout@v2"
         with:
