--- a/.github/workflows/test_resinsight.yml
+++ b/.github/workflows/test_resinsight.yml
@@ -76,6 +76,7 @@ jobs:
         run: |
           tar zcf ${{ github.workspace }}/resinsight_${{ env.RESINSIGHT_VERSION }}.tar.gz ${{ github.workspace }}/${{ env.INSTALL_DIR }}
       - name: Archive ResInsight
+        if: steps.cache-package.outputs.cache-hit != 'true'
         uses: actions/upload-artifact@v3
         with:
           name: resinsight_${{ env.RESINSIGHT_VERSION }}
@@ -104,8 +105,8 @@ jobs:
         run: |
           cd $HOME
           tar zxf ${{ github.workspace }}/resinsight_${{ env.RESINSIGHT_VERSION }}.tar.gz
-          echo "PATH=${PATH}:${HOME}/${INSTALL_DIR}" >> ${GITHUB_ENV}
-          echo $PATH
+          echo "${HOME}/${INSTALL_DIR}" >> $GITHUB_PATH
+          echo $GITHUB_PATH
 
       - uses: "actions/checkout@v2"
         with:
@@ -121,5 +122,5 @@ jobs:
 
       - name: "Test package spinningjenny"
         run: |
-          echo $PATH
+          echo $GITHUB_PATH
           pytest -m "${{ matrix.test_type }}" -sv --hypothesis-profile ci
