--- a/.github/workflows/test_resinsight.yml
+++ b/.github/workflows/test_resinsight.yml
@@ -84,13 +84,12 @@ jobs:
   tests:
     needs: build_dependencies
     if: ${{ always() && needs.build_dependencies.result != 'failed' }}
-    name: "tests_${{ matrix.os }}_py-${{ matrix.python-version }}_${{ matrix.test_type }}"
+    name: "tests_${{ matrix.os }}_py-${{ matrix.python-version }}_resinsight"
     strategy:
       fail-fast: false
       matrix:
         python-version: [3.8]
         os: [ubuntu-22.04]
-        test_type: ["resinsight"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: "actions/setup-python@v5"
@@ -109,7 +108,6 @@ jobs:
           sudo apt -y install qtbase5-dev qtbase5-private-dev libqt5charts5-dev libqt5svg5-dev
           # Unpack after checking out, otherwise the checkout action would delete it:
           tar zxf resinsight_${{ env.RESINSIGHT_VERSION }}.tar.gz
-          echo "${{ github.workspace }}/${{ env.INSTALL_DIR }}" >> $GITHUB_PATH
       - name: "Install the package"
         run: |
           pip install --upgrade pip setuptools
@@ -118,4 +116,4 @@ jobs:
           pip install .[test]
       - name: Run tests using resinsight
         run: |
-          pytest -m "${{ matrix.test_type }}" -sv
+          RESINSIGHT_EXECUTABLE="${{ github.workspace }}/${{ env.INSTALL_DIR }}/ResInsight" pytest -sv --test-resinsight -m resinsight
