Update ruff (deprication warning action)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ markers = [
 log_cli = 0
 log_cli_level = "INFO"
 
-[tool.ruff]
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
