Wells.json Token system documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,11 +9,12 @@ nav:
   - Home: index.md
   - tutorials.md
   - How-To Guides:
-      - contribute/contribute.md
-      - Add Template: https://fmu-docs.equinor.com/docs/everest/tutorial/everest_templating.html#pipelining-forward-models
-      - Well Order Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_order_optimisation.html#forward-models
-      - Well Rate Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_rate_optimisation.html#forward-models
-      - Well Selection Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_selection.html#forward-models
+    - contribute/contribute.md
+    - Add Template: https://fmu-docs.equinor.com/docs/everest/tutorial/everest_templating.html#pipelining-forward-models
+    - Well Order Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_order_optimisation.html#forward-models
+    - Well Rate Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_rate_optimisation.html#forward-models
+    - Well Selection Optimization: https://fmu-docs.equinor.com/docs/everest/tutorial/well_selection.html#forward-models
+    - Tokens: tokens/how_to_guide.md
   - Reference:
       - Jobs:
           - Add Templates: reference/add_templates/reference.md
@@ -37,7 +38,9 @@ nav:
           - Models: reference/shared/models.md
           - Arguments: reference/shared/arguments.md
       - reference/hook.md
-  - explanation.md
+  - Explanation:
+      - Project Structure: explanations/project_structure.md
+      - Operations Rework: explanations/operations_rework.md
 
 plugins:
   - search
