--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -43,4 +43,4 @@ jobs:
 
       - name: "Test package everest-models"
         run: |
-          python -m pytest -sv --hypothesis-profile ci
+          python -m pytest -sv --hypothesis-profile ci --run-slow
