--- a/docs/reference/well_swapping/well_swapping_config.yml
+++ b/docs/reference/well_swapping/well_swapping_config.yml
@@ -127,7 +127,7 @@ state:
   - '...'
 
   # Are cases allowed to stay at the same state?
-  # False: Inforce cases to change state each iteration, (can cause state lock)
+  # False: Enforce cases to change state each iteration, (can cause state lock)
   # True: Cases are allowed to stay at same state between iterations
 
   # Datatype: boolean
@@ -148,7 +148,7 @@ state:
 # Relative or absolute path to Everest generated or forward model modefied json case file.
 # NOTE: cli option argument `--cases CASES` overrides this field
 # Datatype: Path
-# Examples: /path/to/file.ext, /path/to/dirictory/
+# Examples: /path/to/file.ext, /path/to/directory/
 # Required: False
 # Default: null
 case_file: null
