--- a/docs/reference/add_templates/config.yml
+++ b/docs/reference/add_templates/config.yml
@@ -1,19 +1,18 @@
 # -c/--config specification:
-# '...' are REQUIRED fields that needs replacing
+# <REPLACE> is a REQUIRED field that needs replacing
 
 
-# Datatype: [Template map]
 # Required: True
 templates:
--
+  -
 
     # File path to jinja template
     # Datatype: Path
     # Examples: /path/to/file.ext, /path/to/directory/
     # Required: True
-  file: '...'  # ← REPLACE
+    file: <REPLACE>
 
     # Datatype: Keys
     # Examples: {opname: KBD, phase: WATER, <field>: <value>}
     # Required: False
-  keys: {}
+    keys: {}
