--- a/docs/reference/npv/config.yml
+++ b/docs/reference/npv/config.yml
@@ -1,28 +1,27 @@
 # -c/--config specification:
-# '...' are REQUIRED fields that needs replacing
+# <REPLACE> is a REQUIRED field that needs replacing
 
 
-# Datatype: {string: [CurrencyRate map]}
 # Required: True
 prices:
-  <string>:
-  -
+  <STRING>:
+    -
 
       # Datatype: number
       # Examples: .1, 1., 1, 1.0, 1.34E-5, 1.34e-5
       # Required: True
-    value: '...'  # ← REPLACE
+      value: <REPLACE>
 
       # Datatype: string
       # Examples: a string value
       # Required: False
       # Default: null
-    currency: null
+      currency: null
 
       # Datatype: date
       # Examples: 2024-01-31, 2024-01-31T11:06
       # Required: True
-    date: '...'  # ← REPLACE
+      date: <REPLACE>
 
 # Datatype: integer
 # Examples: .1, 1., 1, 1.0, 1.34E-5, 1.34e-5
@@ -42,7 +41,6 @@ default_exchange_rate: 1
 # Default: 0.08
 default_discount_rate: 0.08
 
-# Datatype: Dates map
 # Required: False
 dates:
 
@@ -64,92 +62,88 @@ dates:
   # Default: null
   ref_date: null
 
-# Datatype: {string: [CurrencyRate map]}
 # Required: False
 exchange_rates:
-  <string>:
-  -
+  <STRING>:
+    -
 
       # Datatype: number
       # Examples: .1, 1., 1, 1.0, 1.34E-5, 1.34e-5
       # Required: True
-    value: '...'  # ← REPLACE
+      value: <REPLACE>
 
       # Datatype: string
       # Examples: a string value
       # Required: False
       # Default: null
-    currency: null
+      currency: null
 
       # Datatype: date
       # Examples: 2024-01-31, 2024-01-31T11:06
       # Required: True
-    date: '...'  # ← REPLACE
+      date: <REPLACE>
 
-# Datatype: [CurrencyRate map]
 # Required: False
 discount_rates:
--
+  -
 
     # Datatype: number
     # Examples: .1, 1., 1, 1.0, 1.34E-5, 1.34e-5
     # Required: True
-  value: '...'  # ← REPLACE
+    value: <REPLACE>
 
     # Datatype: string
     # Examples: a string value
     # Required: False
     # Default: null
-  currency: null
+    currency: null
 
     # Datatype: date
     # Examples: 2024-01-31, 2024-01-31T11:06
     # Required: True
-  date: '...'  # ← REPLACE
+    date: <REPLACE>
 
-# Datatype: [CurrencyRate map]
 # Required: False
 costs:
--
+  -
 
     # Datatype: number
     # Examples: .1, 1., 1, 1.0, 1.34E-5, 1.34e-5
     # Required: True
-  value: '...'  # ← REPLACE
+    value: <REPLACE>
 
     # Datatype: string
     # Examples: a string value
     # Required: False
     # Default: null
-  currency: null
+    currency: null
 
     # Datatype: date
     # Examples: 2024-01-31, 2024-01-31T11:06
     # Required: True
-  date: '...'  # ← REPLACE
+    date: <REPLACE>
 
-# Datatype: [WellCost map]
 # Required: False
 well_costs:
--
+  -
 
     # Datatype: number
     # Examples: .1, 1., 1, 1.0, 1.34E-5, 1.34e-5
     # Required: True
-  value: '...'  # ← REPLACE
+    value: <REPLACE>
 
     # Datatype: string
     # Examples: a string value
     # Required: False
     # Default: null
-  currency: null
+    currency: null
 
     # Datatype: string
     # Examples: a string value
     # Required: True
-  well: '...' # ← REPLACE
+    well: <REPLACE>
 
 # Datatype: [string]
 # Required: True
 summary_keys:
-- '...'
+  - <REPLACE>
