--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,7 +16,7 @@ jobs:
     name: "Python ${{ matrix.python-version }} on ${{ matrix.os }}"
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         os: [ ubuntu-latest]
         include:
           - os: macos-latest
@@ -25,17 +25,17 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: "actions/checkout@v2"
+      - uses: "actions/checkout@v4"
         with:
           fetch-depth: 0
 
-      - uses: "actions/setup-python@v4"
+      - uses: "actions/setup-python@v5"
         with:
           python-version: "${{ matrix.python-version }}"
 
       - name: "Install dependencies"
         run: |
-          pip install --upgrade pip setuptools
+          pip install --upgrade pip
 
       - name: "Install package"
         run: |
