--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
     "Programming language :: Python :: 3.9",
     "Programming language :: Python :: 3.10",
     "Programming language :: Python :: 3.11",
+    "Programming language :: Python :: 3.12",
 ]
 dependencies = [
     "resdata",
